--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@1,500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Neuton:wght@700&display=swap');
+
+
+
+body{
+font-family: 'Lexend Mega', sans-serif;
+width: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: hidden!important;
+}
+
 :root{
   --primary-dark:rgba(255,255,255,0)
 }
 
 
-body{
-font-family: 'Lexend Mega', sans-serif;
-}
 
 
 nav a.nav-link{
-  font-weight: 200;
+  font-weight: 800;
   font-size: .8rem;
   /* letter-spacing: 0.0375rem; */
   cursor:pointer;
@@ -37,3 +49,410 @@ nav ul li{
   .navbar-nav > li > a:hover{
     border-top: .1875rem solid #EB5D13
     }
+/******************************************8 header CSS 8**************************************************************************/
+/* ***************************************************************************************************************************** */
+
+.header-wrapper{
+  position: relative!important;
+  z-index:3;
+  background-image: url(./images/bg-img2.jpg);
+
+  background-size: cover;
+  background-position: center;
+  height: 93vh;
+}
+
+.header-info{
+  display: flex;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center ;
+  text-align: center;
+  color: #023e8a;
+  text-transform: uppercase;
+
+}
+
+
+
+
+.glow {
+  color:#e45826;
+  margin-bottom: 4rem;
+  font-family: 'Dancing Script', cursive;
+  text-transform: none;
+  font-size: 4.063rem;
+
+}
+
+
+
+.typed-text{
+margin-top: 5rem;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.tsparticles-canvas-el{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 6
+}
+
+  /* *************************************************************SKILLS CONTENT ***************************************************************************************************************8*/
+  /* ****************************************************************8**************8********************************************************* */
+
+/* .skills-wrapper{
+  position: relative;
+  background-color: #ced4da;
+  background-size: cover;
+  background-position: center;
+  height: 63vh;
+
+} */
+/* .card{
+background-color: #ced4da !important;
+} */
+
+
+.List{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin:2rem 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .List {
+    margin:2rem auto;
+  }
+}
+@media screen and (max-width: 1600px) {
+  .skills-text{
+    width:100%!important
+  }
+}
+h6{
+  font-size: .75rem;
+
+}
+.img{
+  height: 7rem;
+  width:7rem;
+  border-radius: 50%!important;
+
+}
+
+
+  .vl {
+  border-left: 3px solid #ced4da;
+  height: 100%;
+}
+
+.imag{
+  max-width: 100% ;
+  height:auto;
+  padding: .5rem .5rem
+}
+.list-content{
+  /* margin:0.5rem 2rem;
+    padding: 0 3rem; */
+list-style-type: none;
+}
+
+
+/* *****************************************************************88PROJECT CONTENT88*************************************************** */
+/* ***********************************************************************************************************************************************
+
+*********************************************************************************************************************************************** */
+
+/*
+.project-wrapper{
+
+  position: relative;
+  height: 93vh;
+
+} */
+
+
+/* Media Queries */
+/* Card sizing */
+/* Colors */
+/* Calculations */
+/* Placeholders */
+ @media (min-width: 1000px) {
+	 #timeline .demo-card:nth-child(odd) .head::after, #timeline .demo-card:nth-child(even) .head::after {
+		 position: absolute;
+		 content: "";
+		 width: 0;
+		 height: 0;
+		 border-top: 15px solid transparent;
+		 border-bottom: 15px solid transparent;
+	}
+	 #timeline .demo-card:nth-child(odd) .head::before, #timeline .demo-card:nth-child(even) .head::before {
+		 position: absolute;
+		 content: "";
+		 width: 9px;
+		 height: 9px;
+		 background-color: #bdbdbd;
+		 border-radius: 9px;
+		 box-shadow: 0px 0px 2px 8px #f7f7f7;
+	}
+}
+/* Some Cool Stuff */
+ .demo-card:nth-child(1) {
+	 order: 1;
+}
+ .demo-card:nth-child(2) {
+	 order: 4;
+}
+ .demo-card:nth-child(3) {
+	 order: 2;
+}
+ .demo-card:nth-child(4) {
+	 order: 5;
+}
+ .demo-card:nth-child(5) {
+	 order: 3;
+}
+ .demo-card:nth-child(6) {
+	 order: 6;
+}
+/* Border Box */
+ * {
+	 box-sizing: border-box;
+}
+/* Fonts */
+ /* body {
+	 font-family: Roboto;
+} */
+ #timeline {
+	 padding: 100px 0;
+	 background: #f7f7f7;
+	 border-top: 1px solid rgba(191, 191, 191, 0.4);
+	 border-bottom: 1px solid rgba(191, 191, 191, 0.4);
+}
+ #timeline h1 {
+	 text-align: center;
+	 font-size: 3rem;
+	 font-weight: 200;
+	 margin-bottom: 20px;
+}
+ #timeline p.leader {
+	 text-align: center;
+	 max-width: 90%;
+	 margin: auto;
+	 margin-bottom: 45px;
+}
+ #timeline .demo-card-wrapper {
+	 position: relative;
+	 margin: auto;
+}
+ @media (min-width: 1000px) {
+	 #timeline .demo-card-wrapper {
+		 display: flex;
+		 flex-flow: column wrap;
+		 width: 73.125rem;
+		 height: 103.125rem;
+		 margin: 0 auto;
+	}
+}
+ #timeline .demo-card-wrapper::after {
+	 z-index: 1;
+	 content: "";
+	 position: absolute;
+	 top: 0;
+	 bottom: 0;
+	 left: 50%;
+	 border-left: 1px solid rgba(191, 191, 191, 0.4);
+}
+ @media (min-width: 1000px) {
+	 #timeline .demo-card-wrapper::after {
+		 border-left: 1px solid #bdbdbd;
+	}
+}
+ #timeline .demo-card {
+	 position: relative;
+	 display: block;
+	 margin: 10px auto 80px;
+	 max-width: 94%;
+	 z-index: 2;
+}
+ @media (min-width: 480px) {
+	 #timeline .demo-card {
+		 max-width: 60%;
+		 box-shadow: 0px 1px 22px 4px rgba(0, 0, 0, 0.07);
+	}
+}
+ @media (min-width: 720px) {
+	 #timeline .demo-card {
+		 max-width: 40%;
+	}
+}
+ @media (min-width: 1000px) {
+	 #timeline .demo-card {
+		 max-width: 450px;
+		 height: 400px;
+		 margin: 90px;
+		 margin-top: 45px;
+		 margin-bottom: 45px;
+	}
+	 #timeline .demo-card:nth-child(odd) {
+		 margin-right: 45px;
+	}
+	 #timeline .demo-card:nth-child(odd) .head::after {
+		 border-left-width: 15px;
+		 border-left-style: solid;
+		 left: 100%;
+	}
+	 #timeline .demo-card:nth-child(odd) .head::before {
+		 left: 491.5px;
+	}
+	 #timeline .demo-card:nth-child(even) {
+		 margin-left: 45px;
+	}
+	 #timeline .demo-card:nth-child(even) .head::after {
+		 border-right-width: 15px;
+		 border-right-style: solid;
+		 right: 100%;
+	}
+	 #timeline .demo-card:nth-child(even) .head::before {
+		 right: 489.5px;
+	}
+	 #timeline .demo-card:nth-child(2) {
+		 margin-top: 180px;
+	}
+}
+ #timeline .demo-card .head {
+	 position: relative;
+	 display: flex;
+	 align-items: center;
+	 color: #fff;
+	 font-weight: 400;
+}
+ #timeline .demo-card .head .number-box {
+	 display: inline;
+	 float: left;
+	 margin: 15px;
+	 padding: 10px;
+	 font-size: 35px;
+	 line-height: 35px;
+	 font-weight: 600;
+	 background: rgba(0, 0, 0, 0.17);
+}
+ #timeline .demo-card .head h2 {
+	 text-transform: uppercase;
+	 font-size: 1.3rem;
+	 font-weight: inherit;
+	 letter-spacing: 2px;
+	 margin: 0;
+	 padding-bottom: 6px;
+	 line-height: 1rem;
+}
+ @media (min-width: 480px) {
+	 #timeline .demo-card .head h2 {
+		 font-size: 165%;
+		 line-height: 1.2rem;
+	}
+}
+ #timeline .demo-card .head h2 span {
+	 display: block;
+	 font-size: 0.6rem;
+	 margin: 0;
+}
+ @media (min-width: 480px) {
+	 #timeline .demo-card .head h2 span {
+		 font-size: 0.8rem;
+	}
+}
+ #timeline .demo-card .body {
+	 background: #fff;
+	 border: 1px solid rgba(191, 191, 191, 0.4);
+	 border-top: 0;
+	 padding: 15px;
+}
+ @media (min-width: 1000px) {
+	 #timeline .demo-card .body {
+		 height: 320px;
+	}
+}
+ #timeline .demo-card .body p {
+	 font-size: 14px;
+	 line-height: 18px;
+	 margin-bottom: 15px;
+}
+ #timeline .demo-card .body img {
+	 display: block;
+	 width: 100%;
+}
+ #timeline .demo-card--step1 {
+	 background-color: #46b8e9;
+}
+ #timeline .demo-card--step1 .head::after {
+	 border-color: #46b8e9;
+}
+ #timeline .demo-card--step2 {
+	 background-color: #3ee9d1;
+}
+ #timeline .demo-card--step2 .head::after {
+	 border-color: #3ee9d1;
+}
+ #timeline .demo-card--step3 {
+	 background-color: #ce43eb;
+}
+ #timeline .demo-card--step3 .head::after {
+	 border-color: #ce43eb;
+}
+ #timeline .demo-card--step4 {
+	 background-color: #4d92eb;
+}
+ #timeline .demo-card--step4 .head::after {
+	 border-color: #4d92eb;
+}
+ #timeline .demo-card--step5 {
+	 background-color: #46b8e9;
+}
+ #timeline .demo-card--step5 .head::after {
+	 border-color: #46b8e9;
+}
+
+
+/* adcskbcschskjbh */
+
+.contact-link1:hover {
+  box-shadow: 0 20px 28px -3px #0E76A8;
+}
+.contact-link2:hover {
+  box-shadow: 0 20px 28px -3px #25D366;
+}
+.contact-link3:hover {
+  box-shadow: 0 20px 28px -3px #333;
+}
+/* .contact-link:hover{
+  box-shadow: -20px 10px 20px -10px grey;
+} */
+/* .contact-link:before, .effect8:after
+{
+
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.contact-link:after
+{
+
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+} */
